--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,12 +1,14 @@
-import { space_grotesk, source_code_pro } from "./../fonts.ts";
+import { Analytics } from "@vercel/analytics/react";
+import { space_grotesk, source_code_pro, inter } from "./../fonts.ts";
 import "./../style.scss";
 
 export default function App({ Component, pageProps }) {
   return (
     <main
-      className={`${space_grotesk.variable} ${source_code_pro.variable} font-sans`}
+      className={`${space_grotesk.variable} ${source_code_pro.variable} ${inter.variable}`}
     >
       <Component {...pageProps} />
+      <Analytics />
     </main>
   );
 }
