--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -22,7 +22,7 @@ import { Cards, Card } from "nextra/components";
       </svg>
     }
   />
-  {/* <Card
+  <Card
     title="Bài viết"
     href="/posts/intro"
     icon={
@@ -33,5 +33,5 @@ import { Cards, Card } from "nextra/components";
         />
       </svg>
     }
-  /> */}
+  />
 </Cards>
