--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,5 +1,6 @@
 import { Analytics } from "@vercel/analytics/react";
 import { space_grotesk, source_code_pro, inter } from "./../fonts.ts";
+import "@code-hike/mdx/styles";
 import "./../style.scss";
 
 export default function App({ Component, pageProps }) {
