--- a/pages/docs/web-advanced/api.mdx
+++ b/pages/docs/web-advanced/api.mdx
@@ -101,9 +101,9 @@ Trong đó `?` là ký tự bắt đầu của Query String, `&` là ký tự ph
 
 #### fetch()
 
-:::info
+<Callout type="info">
 Trong Javascript còn có XMLHttpRequest (XHR) để tương tác với Web API. Tuy nhiên, cách này hơi khó dùng hơn nên ở đây ta sẽ sử dụng `fetch()` để tương tác với Web API.
-:::
+</Callout>
 
 Về cơ bản, để tương tác với API thì ta sẽ gửi một request đến API và nhận về một response. Trong Javascript, ta có thể sử dụng hàm `fetch()` để gửi một request đến API và nhận về một response.
 
