--- a/pages/docs/web-advanced/object.mdx
+++ b/pages/docs/web-advanced/object.mdx
@@ -5,6 +5,8 @@ toc_max_heading_level: 6
 sidebar_position: 4
 ---
 
+import { Callout } from "nextra/components";
+
 # Object
 
 ## Khái niệm
@@ -29,11 +31,11 @@ Trong đoạn code trên, ta có một **object** với 3 thuộc tính:
 - `age` có giá trị là `20`
 - `address` có giá trị là `"New York"`
 
-:::info
+<Callout type="info">
 **Object** trong Javascript cũng tương tự như object trong thế giới thực. Ví dụ, một chiếc xe hơi có thể được coi là một object, và các thuộc tính của nó có thể là `brand` (hãng xe), `color` (màu sắc), `price` (giá bán), `weight` (trọng lượng), ...
 
 **Object** sẽ phù hợp để thể hiện dữ liệu về một đối tượng cụ thể nào đó.
-:::
+</Callout>
 
 ## Khai báo
 
