--- a/pages/docs/web-basic/flexbox.mdx
+++ b/pages/docs/web-basic/flexbox.mdx
@@ -5,6 +5,8 @@ toc_max_heading_level: 6
 sidebar_position: 3
 ---
 
+import { Callout } from "nextra/components";
+
 # Flexbox
 
 > Flexbox là một module của CSS3 giúp xây dựng layout linh hoạt và dễ dàng hơn. Flexbox được thiết kế để giải quyết các vấn đề về layout mà các module trước đó như Float và Position không thể giải quyết được.
@@ -63,11 +65,11 @@ Thuộc tính `flex-direction` quy định hướng của **main axis**, cũng l
 }
 ```
 
-:::danger
+<Callout type="error">
 
 Flexbox sắp xếp các flex item theo một hướng
 
-:::
+</Callout>
 
 #### `flex-wrap`
 
