--- a/pages/docs/web-advanced/array.mdx
+++ b/pages/docs/web-advanced/array.mdx
@@ -5,6 +5,8 @@ toc_max_heading_level: 6
 sidebar_position: 3
 ---
 
+import { Callout } from "nextra/components";
+
 # Array
 
 ## Khái niệm
@@ -103,9 +105,9 @@ console.log(arr); // [2, 3, 4, 5]
 
 ---
 
-:::tip
+<Callout type="info">
 Ngoài ra còn rất nhiều phương thức khác của Array, có thể tham khảo thêm tại [MDN](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array#instance_methods).
-:::
+</Callout>
 
 ## CRUD với Array
 
@@ -191,7 +193,7 @@ arr.pop(); // var_name.pop()
 console.log(arr); // [3, 4]
 ```
 
-:::info
+<Callout type="info">
 `delete` cũng có thể xóa giá trị của phần tử trong mảng.
 
 ```javascript
@@ -203,7 +205,7 @@ console.log(arr); // [1, empty, 3, 4, 5]
 ```
 
 nhưng `delete` không hoàn toàn xóa phần tử khỏi mảng mà chỉ đặt giá trị của phần tử đó thành `undefined`.
-:::
+</Callout>
 
 ## Array `foreach`
 
