--- a/pages/docs/web-basic/css-selectors.mdx
+++ b/pages/docs/web-basic/css-selectors.mdx
@@ -107,7 +107,7 @@ p[type="text"] {
 
 Ở ví dụ trên, tất cả các phần tử `<p>` có thuộc tính `type` có giá trị là `text` sẽ có màu chữ là màu đỏ.
 
-<Callout emoji="">
+<Callout emoji="👨‍💻">
   **Lưu ý**: Selector theo tên thẻ phải đứng trước selector theo class, id,
   thuộc tính.
 </Callout>
