--- a/pages/docs/web-advanced/snippet.mdx
+++ b/pages/docs/web-advanced/snippet.mdx
@@ -99,6 +99,7 @@ document.addEventListener("DOMContentLoaded", function () {
     // Thông báo đăng nhập thành công và lưu thông tin đăng nhập vào Local Storage
     localStorage.setItem("isLogin", true);
     alert("Đăng nhập thành công");
+    window.location.href = "/index.html";
   });
 });
 ```
