--- a/pages/docs/web-advanced/snippet.mdx
+++ b/pages/docs/web-advanced/snippet.mdx
@@ -258,3 +258,194 @@ fetch(apiEndpoint)
     });
   });
 ```
+
+## API + Search Function + Render HTML
+
+Render HTML kèm ô tìm kiếm với dữ liệu từ API [https://mock-api.quanph.dev/api/81463452/products](https://mock-api.quanph.dev/api/81463452/products) (danh sách 10 sản phẩm)
+
+**Chuẩn bị file HTML và JS**
+
+<Tabs items={['HTML', 'JS']}>
+  <Tabs.Tab>
+    ```html index.html
+    <!doctype html>
+    <html lang="en">
+      <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Products</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      </head>
+      <body>
+        <div class="container mx-auto my-5">
+          <h1 class="text-center">
+            Products
+          </h1>
+          
+          <form action="#" class="mt-5" id="search-form">
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Search</label>
+              <input type="text" class="form-control" id="keyword" placeholder="Input your search keyword">
+            </div>
+          </form>
+          
+          <ul id="products" class="list-group">
+            <!-- Products go here -->
+          </ul>
+        </div>
+        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      </body>
+    </html>
+    ```
+
+  </Tabs.Tab>
+  <Tabs.Tab>
+    ```js app.js
+    // Biến chứa từ khóa tìm kiếm
+    let keyword = "";
+    // Đường dẫn API
+    const apiEndpoint = `https://mock-api.quanph.dev/api/81463452/products?keyword=${keyword}`;
+    // Element sẽ dùng để hiển thị danh sách sản phẩm
+    const productsContainer = document.getElementById("products");
+    // Element form tìm kiếm
+    const searchForm = document.getElementById("search-form");
+    // Element input tìm kiếm
+    const keywordInput = document.getElementById("keyword");
+    ```
+  </Tabs.Tab>
+</Tabs>
+
+**Lấy dữ liệu từ API**
+
+```js app.js
+// Biến chứa từ khóa tìm kiếm
+let keyword = "";
+// Đường dẫn API
+let apiEndpoint = "https://mock-api.quanph.dev/api/81463452/products";
+// Element sẽ dùng để hiển thị danh sách sản phẩm
+const productsContainer = document.getElementById("products");
+// Element form tìm kiếm
+const searchForm = document.getElementById("search-form");
+// Element input tìm kiếm
+const keywordInput = document.getElementById("keyword");
+
+// Lấy dữ liệu từ API
+function fetchProducts() {
+  fetch(apiEndpoint)
+    .then(response => response.json())
+    .then(data => {
+      // console.log(data);
+      // [{ id: 1, title: '...', price: 0, ... }, { id: 2, title: '...', price: 0, ... }, ... ]
+      renderProducts(data.data);
+    });
+}
+```
+
+**Render danh sách sản phẩm**
+
+```js app.js
+// ...
+
+// function fetchProducts() { ... }
+
+function renderProducts(data) {
+  // Xóa danh sách sản phẩm cũ
+  productsContainer.innerHTML = "";
+
+  // Render HTML
+  data.forEach(product => {
+    productsContainer.innerHTML += `
+      <li class="list-group-item">
+        <h3>${product.name}</h3>
+        <p class="mb-0">${product.price} $</p>
+      </li>
+    `;
+  });
+}
+
+// Gọi hàm fetchProducts để lấy dữ liệu từ API
+fetchProducts();
+```
+
+**Tìm kiếm**
+
+```js app.js
+// ...
+
+// function fetchProducts() { ... }
+
+// function renderProducts(data) { ... }
+
+// Thêm sự kiện submit cho form tìm kiếm
+searchForm.addEventListener("submit", function (event) {
+  // Ngăn hành động submit mặc định của form (reload hoặc chuyển trang tùy theo `action` của form)
+  event.preventDefault();
+
+  // Lấy giá trị từ input tìm kiếm
+  keyword = keywordInput.value;
+
+  // Cập nhật đường dẫn API với từ khóa tìm kiếm
+  apiEndpoint = `https://mock-api.quanph.dev/api/81463452/products?query=${keyword}&query_field=name`;
+
+  // Gọi hàm fetchProducts để lấy dữ liệu từ API
+  fetchProducts();
+});
+
+// Thêm sự kiện input cho input tìm kiếm
+keywordInput.addEventListener("input", function () {
+  // Lấy giá trị từ input tìm kiếm
+  keyword = keywordInput.value;
+
+  // Cập nhật đường dẫn API với từ khóa tìm kiếm
+  apiEndpoint = `https://mock-api.quanph.dev/api/81463452/products?query=${keyword}&query_field=name`;
+
+  // Gọi hàm fetchProducts để lấy dữ liệu từ API
+  fetchProducts();
+});
+```
+
+### Debounce
+
+> Thay vì gọi API mỗi khi người dùng nhập vào ô tìm kiếm, ta sẽ sử dụng hàm `debounce` để giới hạn tần suất gọi hàm mỗi 300ms.
+
+```js app.js
+// ...
+
+// function fetchProducts() { ... }
+
+// function renderProducts(data) { ... }
+
+// Thêm sự kiện submit cho form tìm kiếm ...
+
+// Thêm sự kiện input cho input tìm kiếm
+keywordInput.addEventListener("input", debounce(function () {
+  // Lấy giá trị từ input tìm kiếm
+  keyword = keywordInput.value;
+
+  // Cập nhật đường dẫn API với từ khóa tìm kiếm
+  apiEndpoint = `https://mock-api.quanph.dev/api/81463452/products?query=${keyword}&query_field=name`;
+
+  // Gọi hàm fetchProducts để lấy dữ liệu từ API
+  fetchProducts();
+}, 300)); // Thay đổi 300ms thành thời gian debounce mong muốn
+
+// Hàm debounce để giới hạn tần suất gọi hàm
+function debounce(func, delay) {
+  let timeoutId;
+  return function (...args) {
+    if (timeoutId) {
+      clearTimeout(timeoutId);
+    }
+    timeoutId = setTimeout(() => {
+      func.apply(this, args);
+    }, delay);
+  };
+}
+```
+
+### Tổng kết
+
+> Đoạn code trên sẽ giúp bạn tạo một trang web đơn giản với danh sách sản phẩm và chức năng tìm kiếm. Khi người dùng nhập từ khóa vào ô tìm kiếm, danh sách sản phẩm sẽ được lọc theo từ khóa đó. Nếu không có sản phẩm nào khớp với từ khóa, danh sách sẽ hiển thị trống.
+
+<script async src="//jsfiddle.net/h0v2qb4k/1/embed/result,js,html/dark/"></script>
