✨ feat(docs): add web-intensive snippet for Google login with Firebase

--- a/pages/docs/web-advanced/snippet.mdx
+++ b/pages/docs/web-advanced/snippet.mdx
@@ -448,4 +448,4 @@ function debounce(func, delay) {
 
 > Đoạn code trên sẽ giúp bạn tạo một trang web đơn giản với danh sách sản phẩm và chức năng tìm kiếm. Khi người dùng nhập từ khóa vào ô tìm kiếm, danh sách sản phẩm sẽ được lọc theo từ khóa đó. Nếu không có sản phẩm nào khớp với từ khóa, danh sách sẽ hiển thị trống.
 
-<script async src="//jsfiddle.net/h0v2qb4k/1/embed/result,js,html/dark/"></script>
+<iframe width="100%" height="300" src="//jsfiddle.net/h0v2qb4k/1/embedded/result,js,html/" frameborder="0" loading="lazy" allowtransparency="true" allowfullscreen="true"></iframe>
